--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	{% if page.title %}<title>{{page.title}}</title>{% else %}<title>Integromat Developers</title>{% endif %}
-	<link rel="stylesheet" href="//static.integromat.com/css/bootstrap.light.min.css">
+	<link rel="stylesheet" href="//static.integromat.com/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//static.integromat.com/css/font-awesome.min.css">
-	<link rel="stylesheet" href="//static.integromat.com/css/public.light.css">
+	<link rel="stylesheet" href="//static.integromat.com/css/public.css">
 	<link rel="stylesheet" href="/css/theme.css">
 </head>
 <body>
