--- a/_layouts/apps.html
+++ b/_layouts/apps.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Open+Sans+Condensed:300&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<meta charset="utf-8">
